--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="./img/carousel-2.jpg" class="d-block w-100" alt="imagem">
+      <img src="./img/carousel-2.JPG" class="d-block w-100" alt="imagem">
       	<div class="carousel-caption d-none d-md-block">
       	<h1>Encomendas Especias</h1>
       	<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="./img/carousel-3.jpg" class="d-block w-100" alt="imagem">
+      <img src="./img/carousel-3.JPG" class="d-block w-100" alt="imagem">
       <div class="carousel-caption d-none d-md-block">
       	<h1>Os Mais Pequenos</h1>
       	<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
