--- a/index.html
+++ b/index.html
@@ -201,28 +201,27 @@
 
 <!--                  Footer           -->
 
-<footer class="container">
-	<div class="row justify-content-center">
-		<div class="col-sm-4"><hr></div>
-
-		<div class="col-sm-4">
-			<h4 class="text-center">Social</h4>
-			<div class="btn-group-vertical btn-block w-100" role="group">
-				
-				<a href="#" class="btn btn-outline-primary"> Facebook</a>
-				<a href="#" class="btn btn-outline-primary"> Twitter</a>
-				<a href="#" class="btn btn-outline-primary"> Instagram</a>
-			</div>
-		</div>
-
-
-		<div class="col-12 mt-3">
-			<blockquote class="blockquote text-center">
-				<p>Todos os Direitos Reservados</p>
-				<div class="blockquote-footer">Copyright-2022<cite title="Título">Chocolife</cite> </div>
-			</blockquote>
-		</div>
-	</div>
-</footer>
+ <footer class="container">
+      <div class="row justify-content-center">
+        <div class="col-12 mb-3">
+          <hr>
+        </div>
+        <div class="col-sm-4">
+          <h4 class="text-center">Social</h4>
+          <div class="btn-group-vertical btn-block w-100" role="group">
+            <a href="https://www.facebook.com/nicolas.dibrasy/" class="btn btn-outline-primary">Facebook</a>
+            <a href="#" class="btn btn-outline-info">Twitter</a>
+            <a href="#" class="btn btn-outline-warning">Instagram</a>
+          </div>
+        </div>
+        
+        <div class="col-12 mt-3">
+          <blockquote class="blockquote text-center">
+            <p>Todos os Direitos Reservados</p>
+            <div class="blockquote-footer">Copyright-2022 <cite title="Título">Chocolife</cite></div>
+          </blockquote>
+        </div>
+      </div>
+    </footer>
 </body>
 </html>
